GPencil: Cutter Tool removes unexpected strokes on another layer #69634

Closed
opened 2019-09-08 04:47:37 +02:00 by n1729 · 3 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.76

Blender Version
Broken: version: 2.81 (sub 2), branch: master, commit date: 2019-08-19 19:05, hash: 74d05eb71a
Worked: (optional)

Short description of error
Cutter Tool removes unexpected strokes on another layer when they are selected and Autolock Inactive Layers option is enabled.

Exact steps for others to reproduce the error

  1. Add strokes on GP_Layer
  2. Add strokes on GP_Layer.001
  3. Enable Autolock Inactive Layers option
  4. Select strokes on GP_Layer.001 in edit mode
  5. Go to draw mode
  6. Activate GP_Layer
  7. Cut a part of stroke on GP_Layer
    Consequence: The stroke on GP_Layer.001 disappears.

Blender 2019-09-08 11-18-50.mp4

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.76 **Blender Version** Broken: version: 2.81 (sub 2), branch: master, commit date: 2019-08-19 19:05, hash: `74d05eb71a` Worked: (optional) **Short description of error** Cutter Tool removes unexpected strokes on another layer when they are selected and Autolock Inactive Layers option is enabled. **Exact steps for others to reproduce the error** 1. Add strokes on GP_Layer 2. Add strokes on GP_Layer.001 3. Enable Autolock Inactive Layers option 4. Select strokes on GP_Layer.001 in edit mode 5. Go to draw mode 6. Activate GP_Layer 7. Cut a part of stroke on GP_Layer Consequence: The stroke on GP_Layer.001 disappears. [Blender 2019-09-08 11-18-50.mp4](https://archive.blender.org/developer/F7722981/Blender_2019-09-08_11-18-50.mp4)
Author

Added subscriber: @n1729

Added subscriber: @n1729
n1729 changed title from GPencil: Cutter Tool removes unwanted strokes on another layer to GPencil: Cutter Tool removes unexpected strokes on another layer 2019-09-08 15:51:09 +02:00
Antonio Vazquez self-assigned this 2019-09-08 16:48:54 +02:00

This issue was referenced by 5de51b46b6

This issue was referenced by 5de51b46b6575bcd0814c2c3d14f267c717919d7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69634
No description provided.