Fix T69634: GPencil:Cutter Tool removes unexpected strokes on another layer

The function was not checking the locked flag.